# EthernetIpPython

./: README.md  pyproject.toml
examples/: README.md  cip_echo_server.py  connected_explicit_smoke.py  echo_module.py  logix_host.py  safety_adapter.py  safety_scanner_1734.py  safety_scanner_loopback.py
src/ethernetip/: __init__.py
src/ethernetip/cip/: __init__.py  attribute.py  catch_all_dispatcher.py  cip_class.py  cpf.py  data_serializer.py  data_types.py  dispatcher.py  encapsulation.py  identity_info.py  instance.py  mr_codec.py  path.py  path_builder.py  service.py  standard_services.py  status.py
src/ethernetip/connections/: __init__.py  connection_manager.py  connection_path_parser.py  forward_open_request.py  io_connection.py  safety_handler.py
src/ethernetip/device/: __init__.py  assembly_object.py  ethernet_link.py  identity_object.py  tcpip_interface.py  virtual_device.py
src/ethernetip/logix/: __init__.py  data_types.py  logix_dispatcher.py  multi_service.py  symbol_object.py  tag.py  tag_client.py  tag_database.py  tag_services.py  template_object.py  udt_code_generator.py
src/ethernetip/protocol/: __init__.py  connected_explicit.py  eip_adapter.py  eip_scanner.py  eip_udp_transport.py  forward_open_config.py  scanner_connection.py  (+1 more)
tests/: conftest.py
tests/cip/: test_cpf.py  test_dispatcher.py  test_encapsulation.py  test_mr_codec.py  test_path.py  test_standard_services.py
tests/logix/: test_edge_cases.py  test_logix.py
tests/protocol/: test_encapsulation_flow.py
tests/safety/: test_crc.py  test_frame_codec.py  test_network_segment.py
(+22 files in other folders)
